--- a/about.html
+++ b/about.html
@@ -784,7 +784,7 @@
         <div class="row align-items-center">
           <div class="col-lg-6">
             <div class="about-image fade-in-up">
-              <img src="img/bg-img/26.jpg" alt="About ASEA" />
+              <img src="img/core-img/SAVE THE DATE_0.png" alt="About ASEA" />
             </div>
           </div>
           <div class="col-lg-6">
