--- a/travel.html
+++ b/travel.html
@@ -8,7 +8,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -589,7 +589,7 @@
                 href="https://www.rwandaair.com"
                 target="_blank"
                 class="btn confer-btn-white mt-4"
-                >Check Flight Options <i class="zmdi zmdi-long-arrow-right"></i
+                >Check Flight Options <i class="fas fa-arrow-right"></i
               ></a>
             </div>
           </div>
@@ -621,7 +621,7 @@
                 target="_blank"
                 class="btn confer-btn"
                 style="color: white"
-                >VISIT WEBSITE <i class="zmdi zmdi-long-arrow-right"></i
+                >VISIT WEBSITE <i class="fas fa-arrow-right"></i
               ></a>
             </div>
           </div>
@@ -668,8 +668,7 @@
                   href="https://www.migration.gov.rw"
                   target="_blank"
                   class="btn confer-btn mt-3 btn-block"
-                  >www.migration.gov.rw
-                  <i class="zmdi zmdi-long-arrow-right"></i
+                  >www.migration.gov.rw <i class="fas fa-arrow-right"></i
                 ></a>
               </div>
             </div>
@@ -738,7 +737,7 @@
 
           <div class="col-12 col-md-4 mb-4">
             <div class="info-box">
-              <i class="zmdi zmdi-shield-security travel-tip-icon"></i>
+              <i class="fas fa-shield-alt travel-tip-icon"></i>
               <h5 class="mb-3">VACCINATIONS</h5>
               <p>
                 The following vaccinations are officially recommended for
@@ -746,16 +745,12 @@
               </p>
               <ul class="list-styled">
                 <li>
-                  <i class="zmdi zmdi-check-circle"></i>
+                  <i class="fas fa-check-circle"></i>
                   <strong>Yellow Fever</strong> - legal requirement
                 </li>
                 <li>
-                  <i class="zmdi zmdi-check-circle"></i>
+                  <i class="fas fa-check-circle"></i>
                   <strong>Malaria prophylaxis</strong> - recommended
-                </li>
-                <li>
-                  <i class="zmdi zmdi-check-circle"></i>
-                  <strong>Insect repellent</strong> - highly recommended
                 </li>
               </ul>
               <p class="mt-3">
@@ -767,7 +762,7 @@
 
           <div class="col-12 col-md-4 mb-4">
             <div class="info-box">
-              <i class="zmdi zmdi-hospital travel-tip-icon"></i>
+              <i class="fas fa-hospital travel-tip-icon"></i>
               <h5 class="mb-3">HEALTH SERVICES</h5>
               <p>
                 First aid and emergency services will be available at the Kigali
@@ -776,17 +771,13 @@
               </p>
               <ul class="list-styled">
                 <li>
-                  <i class="zmdi zmdi-check-circle"></i> King Faisal Hospital
-                  <br /><small>+250 788307561</small>
+                  <i class="fas fa-check-circle"></i> King Faisal Hospital
+                  <br /><small>+250 788 307 561</small>
                 </li>
                 <li>
-                  <i class="zmdi zmdi-check-circle"></i> CHUK <br /><small
-                    >0250 788868240</small
+                  <i class="fas fa-check-circle"></i> CHUK <br /><small
+                    >+250 788 868 240</small
                   >
-                </li>
-                <li>
-                  <i class="zmdi zmdi-check-circle"></i> Genocide Survivors
-                  Hospital <br /><small>+250 788303039</small>
                 </li>
               </ul>
             </div>
@@ -815,7 +806,7 @@
               role="alert"
               style="border-radius: 10px; padding: 20px"
             >
-              <h5><i class="zmdi zmdi-info-outline mr-2"></i> Health Tips</h5>
+              <h5><i class="fas fa-info-circle mr-2"></i> Health Tips</h5>
               <p>
                 Rwanda is a malaria endemic country. Visitors are encouraged to
                 take adequate malaria prevention measures, including sleeping
@@ -842,19 +833,19 @@
           <!-- Travel Tips - Row 1 -->
           <div class="col-12 col-md-6 col-lg-4 mb-4">
             <div class="info-box">
-              <i class="zmdi zmdi-money travel-tip-icon"></i>
+              <i class="fas fa-dollar-sign travel-tip-icon"></i>
               <h5 class="mb-3">CURRENCY</h5>
               <p>
                 Rwanda's currency is the Rwandan Franc (RWF). Exchange rates are
                 subject to fluctuation. Current rates are approximately 1 USD =
-                1,250 RWF. Currency can be exchanged at the airport, banks,
+                1,448.17 RWF. Currency can be exchanged at the airport, banks,
                 hotels, and official exchange bureaus.
               </p>
             </div>
           </div>
           <div class="col-12 col-md-6 col-lg-4 mb-4">
             <div class="info-box">
-              <i class="zmdi zmdi-balance travel-tip-icon"></i>
+              <i class="fas fa-university travel-tip-icon"></i>
               <h5 class="mb-3">BANKING SERVICES</h5>
               <p>
                 ATM services are widely available in Rwanda, and most
@@ -867,7 +858,7 @@
           </div>
           <div class="col-12 col-md-6 col-lg-4 mb-4">
             <div class="info-box">
-              <i class="zmdi zmdi-cloud travel-tip-icon"></i>
+              <i class="fas fa-cloud-sun travel-tip-icon"></i>
               <h5 class="mb-3">CLIMATE</h5>
               <p>
                 Rwanda enjoys a temperate tropical highland climate. The average
@@ -882,7 +873,7 @@
           <!-- Travel Tips - Row 2 -->
           <div class="col-12 col-md-6 col-lg-4 mb-4">
             <div class="info-box">
-              <i class="zmdi zmdi-time travel-tip-icon"></i>
+              <i class="fas fa-clock travel-tip-icon"></i>
               <h5 class="mb-3">LOCAL TIME</h5>
               <p>
                 Rwanda operates on Central Africa Time (CAT). The time zone is 2
@@ -893,7 +884,7 @@
           </div>
           <div class="col-12 col-md-6 col-lg-4 mb-4">
             <div class="info-box">
-              <i class="zmdi zmdi-assignment-return travel-tip-icon"></i>
+              <i class="fas fa-ban travel-tip-icon"></i>
               <h5 class="mb-3">PLASTIC BAGS</h5>
               <p>
                 Rwanda has implemented a ban on single-use plastic items.
@@ -906,7 +897,7 @@
           </div>
           <div class="col-12 col-md-6 col-lg-4 mb-4">
             <div class="info-box">
-              <i class="zmdi zmdi-flash travel-tip-icon"></i>
+              <i class="fas fa-plug travel-tip-icon"></i>
               <h5 class="mb-3">ELECTRIC SUPPLY</h5>
               <p>
                 The electric supply in Rwanda is 220/240 volts. Outlets
@@ -926,7 +917,7 @@
           <!-- Travel Tips - Row 3 -->
           <div class="col-12 col-md-6 col-lg-4 mb-4">
             <div class="info-box">
-              <i class="zmdi zmdi-phone travel-tip-icon"></i>
+              <i class="fas fa-mobile-alt travel-tip-icon"></i>
               <h5 class="mb-3">TELECOMMUNICATIONS</h5>
               <p>
                 Mobile network coverage is excellent in Rwanda, and
@@ -940,7 +931,7 @@
           </div>
           <div class="col-12 col-md-6 col-lg-4 mb-4">
             <div class="info-box">
-              <i class="zmdi zmdi-local-hospital travel-tip-icon"></i>
+              <i class="fas fa-ambulance travel-tip-icon"></i>
               <h5 class="mb-3">EMERGENCY SERVICES</h5>
               <p>Emergency services are available via these numbers:</p>
               <ul class="list-unstyled">
@@ -956,7 +947,7 @@
           </div>
           <div class="col-12 col-md-6 col-lg-4 mb-4">
             <div class="info-box">
-              <i class="zmdi zmdi-shopping-cart travel-tip-icon"></i>
+              <i class="fas fa-business-time travel-tip-icon"></i>
               <h5 class="mb-3">BUSINESS HOURS</h5>
               <p>
                 Most offices operate Monday-Friday from 8 AM to 5 PM. Banks are
@@ -985,7 +976,7 @@
                     href="contact.html"
                     class="btn confer-btn"
                     style="color: white"
-                    >CONTACT US <i class="zmdi zmdi-long-arrow-right"></i
+                    >CONTACT US <i class="fas fa-arrow-right"></i
                   ></a>
                 </div>
               </div>
