--- a/accommodation.html
+++ b/accommodation.html
@@ -395,11 +395,7 @@
         </div>
         <div class="row">
           <div class="col-12">
-            <div
-              class="map-container wow fadeInUp"
-              data-wow-delay="300ms"
-              style="height: 1200px !important"
-            >
+            <div class="map-container wow fadeInUp" data-wow-delay="300ms">
               <iframe
                 src="https://mim.smartbookings.rw/Event-Hotels/65bcca2a75cf2/"
                 width="100%"
