new speakers and about change

--- a/speakers.html
+++ b/speakers.html
@@ -1093,8 +1093,70 @@
               </div>
             </div>
           </div>
+
           <!-- Speaker 8 -->
-          
+          <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="speaker-card" data-category="csd">
+              <div class="speaker-image">
+                <img
+                  src="img/speakers/Ahmed Abdel Rahman Elsheikh.jpg"
+                  alt="Robert Nyamwasa"
+                />
+                <div class="speaker-category">CEO</div>
+                <div class="speaker-overlay">
+                  <div class="speaker-social">
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fas fa-globe"></i></a>
+                  </div>
+                </div>
+              </div>
+              <div class="speaker-info">
+                <h3>Ahmed Abdel Rahman Elsheikh</h3>
+                <h4>CEO, Egyptian Stock Exchange</h4>
+                <p></p>
+                <a
+                  href="#"
+                  class="speaker-btn"
+                  data-toggle="modal"
+                  data-target="#speakerModal8"
+                >
+                  View Profile
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="speaker-card" data-category="csd">
+              <div class="speaker-image">
+                <img
+                  src="img/speakers/Justin Bgoni.jpg"
+                  alt="Robert Nyamwasa"
+                />
+                <div class="speaker-category">CEO</div>
+                <div class="speaker-overlay">
+                  <div class="speaker-social">
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fas fa-globe"></i></a>
+                  </div>
+                </div>
+              </div>
+              <div class="speaker-info">
+                <h3>Justin Bgoni</h3>
+                <h4>CEO, Zimbabwe Stock Exchange</h4>
+                <p></p>
+                <a
+                  href="#"
+                  class="speaker-btn"
+                  data-toggle="modal"
+                  data-target="#speakerModal9"
+                >
+                  View Profile
+                </a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -1449,10 +1511,21 @@
               <div class="col-md-8">
                 <div class="speaker-modal-info">
                   <h3>Bongile Kunene</h3>
-                  <h4>Senior Legal, Risk, Compliance Officer and Company Secretary</h4>
+                  <h4>
+                    Senior Legal, Risk, Compliance Officer and Company Secretary
+                  </h4>
                   <div class="speaker-modal-bio">
                     <p>
-                      As an admitted Attorney, with above 9 years working experience in the legal fraternity, Ms. Kunene has diverse skills in Compliance Management, Governance, Risk Management and Anti-Money Laundering. Ms. Kunene has also worked for the Financial Services Regulatory Authority and the Ministry of Labour and Social Security, she is well vast legal experience in the administration of financial services laws and public administration laws. She is a member of the Law Society of Eswatini and the Compliance Institute of Southern Africa. 
+                      As an admitted Attorney, with above 9 years working
+                      experience in the legal fraternity, Ms. Kunene has diverse
+                      skills in Compliance Management, Governance, Risk
+                      Management and Anti-Money Laundering. Ms. Kunene has also
+                      worked for the Financial Services Regulatory Authority and
+                      the Ministry of Labour and Social Security, she is well
+                      vast legal experience in the administration of financial
+                      services laws and public administration laws. She is a
+                      member of the Law Society of Eswatini and the Compliance
+                      Institute of Southern Africa.
                     </p>
                     <p>
                       With a background in computer science and financial
@@ -1661,7 +1734,10 @@
             <div class="row">
               <div class="col-md-4">
                 <div class="speaker-modal-image">
-                  <img src="img/speakers/Idi.jpg" alt="Idrissa Diop" />
+                  <img
+                    src="img/speakers/Ahmed Abdel Rahman Elsheikh.jpg"
+                    alt="Ahmed Abdel Rahman Elsheikh"
+                  />
                 </div>
                 <div class="speaker-modal-social">
                   <a href="#"><i class="fa fa-linkedin"></i></a>
@@ -1671,35 +1747,33 @@
               </div>
               <div class="col-md-8">
                 <div class="speaker-modal-info">
-                  <h3>Idrissa Diop</h3>
-                  <h4>CEO, Abidjan Stock Exchange</h4>
+                  <h3>Ahmed Abdel Rahman Elsheikh</h3>
+                  <h4>CEO, Egyptian Stock Exchange</h4>
                   <div class="speaker-modal-bio">
                     <p>
-                      Idrissa Diop serves as the Chief Executive Officer of the
-                      Abidjan Stock Exchange, where he has led significant
-                      market development initiatives across the West African
-                      Economic and Monetary Union (WAEMU) region.
+                      Ahmed Abdel Rahman Elsheikh is the Chief Executive Officer
+                      of the Egyptian Stock Exchange. He brings a wealth of
+                      experience in capital markets and financial leadership in
+                      North Africa.
                     </p>
                     <p>
-                      With over 20 years of experience in capital markets and
-                      financial services, Mr. Diop has been instrumental in
-                      implementing reforms that have enhanced regional financial
-                      integration and attracted international investment to West
-                      African markets.
+                      Mr. Elsheikh has played a pivotal role in modernizing
+                      Egypt's capital markets, driving innovation, and fostering
+                      international partnerships. He is recognized for his
+                      commitment to market transparency and investor protection.
                     </p>
                     <p>
-                      At the ASEA Conference 2025, Mr. Diop will share insights
-                      on regional integration strategies and how African
-                      exchanges can collaborate to build stronger, more liquid
-                      markets.
+                      At the ASEA Conference 2025, Mr. Elsheikh will discuss the
+                      future of African exchanges and strategies for regional
+                      growth and integration.
                     </p>
                     <h5>
-                      Session: "Regional Integration: Building Stronger African
-                      Capital Markets"
+                      Session: "Modernizing African Exchanges: The Egyptian
+                      Experience"
                     </h5>
                     <p>
-                      Date: November 27, 2025 | Time: 2:00 PM - 3:30 PM | Venue:
-                      Regional Forum
+                      Date: November 27, 2025 | Time: 4:00 PM - 5:00 PM | Venue:
+                      Main Hall
                     </p>
                   </div>
                 </div>
@@ -1710,7 +1784,77 @@
       </div>
     </div>
 
-    <!-- More speaker modals would be added here -->
+    <!-- Speaker Modal 9 -->
+    <div
+      class="modal fade speaker-modal"
+      id="speakerModal9"
+      tabindex="-1"
+      role="dialog"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Speaker Profile</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="speaker-modal-image">
+                  <img src="img/speakers/Justin Bgoni.jpg" alt="Justin Bgoni" />
+                </div>
+                <div class="speaker-modal-social">
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                  <a href="#"><i class="fa fa-twitter"></i></a>
+                  <a href="#"><i class="fa fa-globe"></i></a>
+                </div>
+              </div>
+              <div class="col-md-8">
+                <div class="speaker-modal-info">
+                  <h3>Justin Bgoni</h3>
+                  <h4>CEO, Zimbabwe Stock Exchange</h4>
+                  <div class="speaker-modal-bio">
+                    <p>
+                      Justin Bgoni is the Chief Executive Officer of the
+                      Zimbabwe Stock Exchange. He is known for his leadership in
+                      revitalizing Zimbabwe's capital markets and promoting
+                      financial inclusion.
+                    </p>
+                    <p>
+                      With a strong background in finance and management, Mr.
+                      Bgoni has overseen key reforms and digital transformation
+                      initiatives, making the exchange more accessible and
+                      resilient.
+                    </p>
+                    <p>
+                      At the ASEA Conference 2025, Mr. Bgoni will share insights
+                      on capital market resilience and innovation in challenging
+                      environments.
+                    </p>
+                    <h5>
+                      Session: "Resilience and Innovation: Zimbabwe's Capital
+                      Market Journey"
+                    </h5>
+                    <p>
+                      Date: November 28, 2025 | Time: 10:00 AM - 11:00 AM |
+                      Venue: Conference Room B
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- Footer Start -->
     <footer class="footer-area">
