--- a/speakers.html
+++ b/speakers.html
@@ -875,6 +875,67 @@
         </div>
 
         <div class="row">
+          <!-- Speaker 7 -->
+          <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="speaker-card" data-category="csd">
+              <div class="speaker-image">
+                <img src="img/speakers/Rwabukumba.jpg" alt="Pierre Celestin Rwabukumba" />
+                <div class="speaker-category">CEO</div>
+                <div class="speaker-overlay">
+                  <div class="speaker-social">
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fas fa-globe"></i></a>
+                  </div>
+                </div>
+              </div>
+              <div class="speaker-info">
+                <h3>Pierre Celestin Rwabukumba</h3>
+                <h4>RSE CEO and ASEA President</h4>
+                <p></p>
+                <a
+                  href="#"
+                  class="speaker-btn"
+                  data-toggle="modal"
+                  data-target="#speakerModal7"
+                >
+                  View Profile
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- Speaker 4 -->
+          <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="speaker-card" data-category="regulator">
+              <div class="speaker-image">
+                <img
+                  src="img/speakers/Senhaji Tarik.jpg"
+                  alt="Dr. Sarah Alade"
+                />
+                <div class="speaker-category">VP</div>
+                <div class="speaker-overlay">
+                  <div class="speaker-social">
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fas fa-globe"></i></a>
+                  </div>
+                </div>
+              </div>
+              <div class="speaker-info">
+                <h3>Senhaji Tarik</h3>
+                <h4>CEO Cassablanca Stock Exchange and ASEA Vice-President</h4>
+                <p></p>
+                <a
+                  href="#"
+                  class="speaker-btn"
+                  data-toggle="modal"
+                  data-target="#speakerModal4"
+                >
+                  View Profile
+                </a>
+              </div>
+            </div>
+          </div>
           <!-- Speaker 1 -->
           <div class="col-lg-3 col-md-6 col-sm-6">
             <div class="speaker-card" data-category="keynote">
@@ -968,38 +1029,7 @@
             </div>
           </div>
 
-          <!-- Speaker 4 -->
-          <div class="col-lg-3 col-md-6 col-sm-6">
-            <div class="speaker-card" data-category="regulator">
-              <div class="speaker-image">
-                <img
-                  src="img/speakers/Senhaji Tarik.jpg"
-                  alt="Dr. Sarah Alade"
-                />
-                <div class="speaker-category">VP</div>
-                <div class="speaker-overlay">
-                  <div class="speaker-social">
-                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fas fa-globe"></i></a>
-                  </div>
-                </div>
-              </div>
-              <div class="speaker-info">
-                <h3>Senhaji Tarik</h3>
-                <h4>Vice President, ASEA</h4>
-                <p></p>
-                <a
-                  href="#"
-                  class="speaker-btn"
-                  data-toggle="modal"
-                  data-target="#speakerModal4"
-                >
-                  View Profile
-                </a>
-              </div>
-            </div>
-          </div>
+          
 
           <!-- Speaker 5 -->
           <div class="col-lg-3 col-md-6 col-sm-6">
@@ -1064,35 +1094,7 @@
             </div>
           </div>
 
-          <!-- Speaker 7 -->
-          <div class="col-lg-3 col-md-6 col-sm-6">
-            <div class="speaker-card" data-category="csd">
-              <div class="speaker-image">
-                <img src="img/speakers/Rwabukumba.jpg" alt="Robert Nyamwasa" />
-                <div class="speaker-category">CEO</div>
-                <div class="speaker-overlay">
-                  <div class="speaker-social">
-                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fas fa-globe"></i></a>
-                  </div>
-                </div>
-              </div>
-              <div class="speaker-info">
-                <h3>Pierre Celestin Rwabukumba</h3>
-                <h4>CEO, ASEA</h4>
-                <p></p>
-                <a
-                  href="#"
-                  class="speaker-btn"
-                  data-toggle="modal"
-                  data-target="#speakerModal7"
-                >
-                  View Profile
-                </a>
-              </div>
-            </div>
-          </div>
+          
 
           <!-- Speaker 8 -->
           <div class="col-lg-3 col-md-6 col-sm-6">
