--- a/speakers.html
+++ b/speakers.html
@@ -941,7 +941,7 @@
             <div class="speaker-card" data-category="keynote">
               <div class="speaker-image">
                 <img src="img/speakers/Frank Mwiti.jpg" alt="Thapelo Tsheole" />
-                <div class="speaker-category">Keynote</div>
+                <div class="speaker-category">CEO</div>
                 <div class="speaker-overlay">
                   <div class="speaker-social">
                     <a href="#"><i class="fab fa-linkedin-in"></i></a>
