--- a/index-2.html
+++ b/index-2.html
@@ -1011,7 +1011,12 @@
               </div>
 
               <!-- Register Button -->
-              <a href="registration.html" class="register-btn">REGISTER</a>
+              <a
+                href="https://the28thaseaa2afd.ev.smartevent.rw/RegisterIframe/en"
+                target="_blank"
+                class="register-btn"
+                >REGISTER</a
+              >
             </nav>
           </div>
         </div>
@@ -1064,7 +1069,12 @@
           </div>
 
           <div class="hero-cta">
-            <a href="registration.html" class="btn-register">REGISTER NOW</a>
+            <a
+              href="https://the28thaseaa2afd.ev.smartevent.rw/RegisterIframe/en"
+              target="_blank"
+              class="btn-register"
+              >REGISTER NOW</a
+            >
             <a href="about.html" class="btn-learn">LEARN MORE</a>
           </div>
         </div>
@@ -1545,7 +1555,12 @@
           Secure your spot at the leading conference for African Securities
           Exchanges. Early bird registration ends July 31, 2025.
         </p>
-        <a href="registration.html" class="btn btn-partnership">Register Now</a>
+        <a
+          href="https://the28thaseaa2afd.ev.smartevent.rw/RegisterIframe/en"
+          target="_blank"
+          class="btn btn-partnership"
+          >Register Now</a
+        >
       </div>
     </section>
     <!-- CTA Section End -->
@@ -1582,7 +1597,13 @@
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="speakers.html">Speakers</a></li>
                 <li><a href="schedule.html">Schedule</a></li>
-                <li><a href="registration.html">Registration</a></li>
+                <li>
+                  <a
+                    href="https://the28thaseaa2afd.ev.smartevent.rw/RegisterIframe/en"
+                    target="_blank"
+                    >Registration</a
+                  >
+                </li>
                 <li><a href="contact.html">Contact Us</a></li>
               </ul>
             </div>
