--- a/index.html
+++ b/index.html
@@ -977,7 +977,12 @@
               </div>
 
               <!-- Register Button -->
-              <a href="registration.html" class="register-btn">REGISTER</a>
+              <a
+                href="https://the28thaseaa2afd.ev.smartevent.rw/RegisterIframe/en"
+                target="_blank"
+                class="register-btn"
+                >REGISTER</a
+              >
             </nav>
           </div>
         </div>
@@ -1021,7 +1026,10 @@
                   </div>
                 </div>
                 <div class="hero-cta">
-                  <a href="registration.html" class="btn btn-view-program"
+                  <a
+                    href="https://the28thaseaa2afd.ev.smartevent.rw/RegisterIframe/en"
+                    target="_blank"
+                    class="btn btn-view-program"
                     >REGISTER NOW</a
                   >
                   <a href="about.html" class="btn btn-partnership"
@@ -1060,7 +1068,10 @@
                   <a href="speakers.html" class="btn btn-view-program"
                     >MEET OUR SPEAKERS</a
                   >
-                  <a href="registration.html" class="btn btn-partnership"
+                  <a
+                    href="https://the28thaseaa2afd.ev.smartevent.rw/RegisterIframe/en"
+                    target="_blank"
+                    class="btn btn-partnership"
                     >REGISTER</a
                   >
                 </div>
@@ -1659,7 +1670,12 @@
           Secure your spot at the leading conference for African Securities
           Exchanges. Early bird registration ends August 15, 2025.
         </p>
-        <a href="registration.html" class="btn btn-partnership">Register Now</a>
+        <a
+          href="https://the28thaseaa2afd.ev.smartevent.rw/RegisterIframe/en"
+          target="_blank"
+          class="btn btn-partnership"
+          >Register Now</a
+        >
       </div>
     </section>
     <!-- CTA Section End -->
@@ -1696,7 +1712,13 @@
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="speakers.html">Speakers</a></li>
                 <li><a href="schedule.html">Schedule</a></li>
-                <li><a href="registration.html">Registration</a></li>
+                <li>
+                  <a
+                    href="https://the28thaseaa2afd.ev.smartevent.rw/RegisterIframe/en"
+                    target="_blank"
+                    >Registration</a
+                  >
+                </li>
                 <li><a href="contact.html">Contact Us</a></li>
               </ul>
             </div>
