--- a/speakers.html
+++ b/speakers.html
@@ -829,7 +829,12 @@
               </div>
 
               <!-- Register Button -->
-              <a href="registration.html" class="register-btn">REGISTER</a>
+              <a
+                href="https://the28thaseaa2afd.ev.smartevent.rw/RegisterIframe/en"
+                target="_blank"
+                class="register-btn"
+                >REGISTER</a
+              >
             </nav>
           </div>
         </div>
@@ -879,7 +884,10 @@
           <div class="col-lg-3 col-md-6 col-sm-6">
             <div class="speaker-card" data-category="csd">
               <div class="speaker-image">
-                <img src="img/speakers/Rwabukumba.jpg" alt="Pierre Celestin Rwabukumba" />
+                <img
+                  src="img/speakers/Rwabukumba.jpg"
+                  alt="Pierre Celestin Rwabukumba"
+                />
                 <div class="speaker-category">CEO</div>
                 <div class="speaker-overlay">
                   <div class="speaker-social">
@@ -1029,8 +1037,6 @@
             </div>
           </div>
 
-          
-
           <!-- Speaker 5 -->
           <div class="col-lg-3 col-md-6 col-sm-6">
             <div class="speaker-card" data-category="tech">
@@ -1093,8 +1099,6 @@
               </div>
             </div>
           </div>
-
-          
 
           <!-- Speaker 8 -->
           <div class="col-lg-3 col-md-6 col-sm-6">
@@ -1890,7 +1894,13 @@
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="speakers.html">Speakers</a></li>
                 <li><a href="schedule.html">Schedule</a></li>
-                <li><a href="registration.html">Registration</a></li>
+                <li>
+                  <a
+                    href="https://the28thaseaa2afd.ev.smartevent.rw/RegisterIframe/en"
+                    target="_blank"
+                    >Registration</a
+                  >
+                </li>
                 <li><a href="contact.html">Contact Us</a></li>
               </ul>
             </div>
