--- a/about.html
+++ b/about.html
@@ -741,7 +741,12 @@
               </div>
 
               <!-- Register Button -->
-              <a href="registration.html" class="register-btn">REGISTER</a>
+              <a
+                href="https://the28thaseaa2afd.ev.smartevent.rw/RegisterIframe/en"
+                target="_blank"
+                class="register-btn"
+                >REGISTER</a
+              >
             </nav>
           </div>
         </div>
@@ -1059,7 +1064,8 @@
           development of African capital markets.
         </p>
         <a
-          href="registration.html"
+          href="https://the28thaseaa2afd.ev.smartevent.rw/RegisterIframe/en"
+          target="_blank"
           class="btn btn-light btn-lg"
           style="
             font-weight: 700;
@@ -1106,7 +1112,13 @@
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="speakers.html">Speakers</a></li>
                 <li><a href="schedule.html">Schedule</a></li>
-                <li><a href="registration.html">Registration</a></li>
+                <li>
+                  <a
+                    href="https://the28thaseaa2afd.ev.smartevent.rw/RegisterIframe/en"
+                    target="_blank"
+                    >Registration</a
+                  >
+                </li>
                 <li><a href="contact.html">Contact Us</a></li>
               </ul>
             </div>
