--- a/registration.html
+++ b/registration.html
@@ -342,7 +342,12 @@
               </div>
 
               <!-- Register Button -->
-              <a href="registration.html" class="register-btn">REGISTER</a>
+              <a
+                href="https://the28thaseaa2afd.ev.smartevent.rw/RegisterIframe/en"
+                target="_blank"
+                class="register-btn"
+                >REGISTER</a
+              >
             </nav>
           </div>
         </div>
@@ -438,7 +443,13 @@
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="speakers.html">Speakers</a></li>
                 <li><a href="schedule.html">Schedule</a></li>
-                <li><a href="registration.html">Registration</a></li>
+                <li>
+                  <a
+                    href="https://the28thaseaa2afd.ev.smartevent.rw/RegisterIframe/en"
+                    target="_blank"
+                    >Registration</a
+                  >
+                </li>
                 <li><a href="contact.html">Contact Us</a></li>
               </ul>
             </div>
