--- a/sponsors.html
+++ b/sponsors.html
@@ -474,7 +474,12 @@
               </div>
 
               <!-- Register Button -->
-              <a href="registration.html" class="register-btn">REGISTER</a>
+              <a
+                href="https://the28thaseaa2afd.ev.smartevent.rw/RegisterIframe/en"
+                target="_blank"
+                class="register-btn"
+                >REGISTER</a
+              >
             </nav>
           </div>
         </div>
