--- a/tickets.html
+++ b/tickets.html
@@ -66,7 +66,8 @@
 
                 <!-- Get Tickets Button -->
                 <a
-                  href="registration.html"
+                  href="https://the28thaseaa2afd.ev.smartevent.rw/RegisterIframe/en"
+                  target="_blank"
                   class="btn confer-btn mt-3 mt-lg-0 ml-3 ml-lg-5"
                   >Register Now <i class="zmdi zmdi-long-arrow-right"></i
                 ></a>
