--- a/about.html
+++ b/about.html
@@ -727,6 +727,9 @@
                     <a class="nav-link" href="sponsors.html">SPONSORS</a>
                   </li>
                   <li class="nav-item">
+                    <a class="nav-link" href="awards.html">ESG AWARDS</a>
+                  </li>
+                  <li class="nav-item">
                     <a class="nav-link" href="accommodation.html"
                       >Accommodation</a
                     >
@@ -1043,7 +1046,9 @@
           <div class="timeline-item">
             <div class="timeline-content fade-in">
               <span class="timeline-year">2025</span>
-              <h4 class="timeline-title">28th Annual Conference</h4>
+              <h4 class="timeline-title">
+                28th Annual Conference and Inaugural Pan-Africa ESG Awards 2025
+              </h4>
               <p>
                 ASEA celebrates its continued growth and impact with the 28th
                 Annual Conference in Kigali, Rwanda.
