--- a/sponsors.html
+++ b/sponsors.html
@@ -460,6 +460,9 @@
                     <a class="nav-link" href="sponsors.html">SPONSORS</a>
                   </li>
                   <li class="nav-item">
+                    <a class="nav-link" href="awards.html">ESG AWARDS</a>
+                  </li>
+                  <li class="nav-item">
                     <a class="nav-link" href="accommodation.html"
                       >Accommodation</a
                     >
@@ -817,7 +820,8 @@
               <div class="text-center mb-5">
                 <p>
                   To learn more about sponsorship opportunities and secure your
-                  place at the ASEA Conference 2025, please contact:
+                  place at the ASEA Conference 2025 and The Inaugural
+                  Pan-Affrica ESG AWARDS 2025, please contact:
                 </p>
                 <div class="my-4">
                   <h5 class="mb-2">Alice Iribagiza</h5>
