--- a/speakers.html
+++ b/speakers.html
@@ -815,6 +815,9 @@
                     <a class="nav-link" href="sponsors.html">SPONSORS</a>
                   </li>
                   <li class="nav-item">
+                    <a class="nav-link" href="awards.html">ESG AWARDS</a>
+                  </li>
+                  <li class="nav-item">
                     <a class="nav-link" href="accommodation.html"
                       >Accommodation</a
                     >
